--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
     <body>
        <h1> Some content.</h1>
-       <img src="https://octodex.github.com/
+       <img src="https://avatars.githubusercontent.com/u/
+94970855?v=4
     </body>
 </html>
