--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
 
     <body>
        <h1> Some content.</h1>
-       <img src="https://avatars.githubusercontent.com/u/
-94970855?v=4
+
+<h1> Some content.</h1>
+<img src="https://avatars.githubusercontent.com/u/94970855?v=4">
+
+       
     </body>
 </html>
