--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     </head>
 
     <body>
-       <h1> Some content.</h1>
+       <h1>Some contents</h1>
 
-<h1> Some content.</h1>
+
 <img src="https://avatars.githubusercontent.com/u/94970855?v=4">
 
        
